# can-fault-monitor

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml
config/: params.yaml
docs/: failure_modes.md
include/can_fault_monitor/: can_socket.hpp  fault_types.hpp
launch/: can_demo.launch.py
msg/: CanFrame.msg  CanHealthStatus.msg  FaultEvent.msg
scripts/: plot_recovery_latency.py
src/: can_health_monitor_node.cpp  can_publisher_node.cpp  can_socket.cpp  can_subscriber_node.cpp  fault_injector_node.cpp
srv/: InjectFault.srv
