<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_fault_monitor</name>
  <version>0.1.0</version>
  <description>
    Fault injection and recovery latency benchmarking for CAN bus robot systems.
    Implements NODE_DROPOUT, FRAME_CORRUPTION, and BUS_FLOOD fault modes over
    Linux SocketCAN (vcan0), with per-fault detection and recovery latency
    measurement. Architecture and detection logic are portable to physical CAN
    hardware with zero code changes (see docs/failure_modes.md — Hardware Delta).
  </description>
  <maintainer email="asrithmoose148@gmail.com">Asrith Pandre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
